--- a/style.css
+++ b/style.css
@@ -12,30 +12,27 @@
     font: normal 13px / 1.35 'Oxygen Mono', 'lucida console', 'courier new', 'courier', monospace;
 }
 
+#t_body a{
+
+    display: inline-block;
+    padding: 0.3em 0.5em 0 0.5em;
+    margin: 0.25em -0.5em 0 -0.5em;
+    line-height: 1.3em;
+    font-size: 100%;
+    color: #04c;
+    cursor: pointer;
+    
+    
+    }
+
 div{
 display: block;
 unicode-bidi: isolate;
-}
-
-body{
-margin: 41px 0 0 0;
-background: #fff;
-font: normal 14px/1.2 roboto,arial,helvetica;
-color: #000;
-}
-
-#t_body a{
-
-display: inline-block;
-padding: 0.3em 0.5em 0 0.5em;
-margin: 0.25em -0.5em 0 -0.5em;
-line-height: 1.3em;
-font-size: 100%;
-color: #04c;
-cursor: pointer;
--webkit-border-radius: 0.4em;
 
 }
+
+
+
 
 a {
     text-decoration: none;
@@ -75,9 +72,10 @@ h1
 
 }
 
-ol {
-    align-items: center;
-    color: #fff;
+nav > ol {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .box{
@@ -92,3 +90,56 @@ html
 #fondo-div{
     background-color:black;
 }
+
+
+.amaranth-regular-italic {
+    font-family: "Amaranth", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 3ex;
+  }
+  
+  .flavors-regular {
+    font-family: "Flavors", cursive;
+    font-weight: 60;
+    font-style: normal;
+    font-size: 3ex;
+  }
+
+  .autour-one-regular {
+    font-family: "Autour One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 3ex;
+  }
+  
+
+.edu-sa-beginner-<uniquifier> {
+  font-family: "Edu SA Beginner", cursive;
+  font-optical-sizing: auto;
+  font-weight: 500x>;
+  font-style: normal;
+  font-size: 3ex;
+}
+
+.barriecito-regular {
+    font-family: "Barriecito", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 3ex;
+  }
+
+  .poetsen-one-regular {
+    font-family: "Poetsen One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 3ex;
+  }
+
+  .estonia-regular {
+    font-family: "Estonia", cursive;
+    font-weight: 400;
+    font-style: normal;
+    
+  }
+  
